--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,16 @@
 @tailwind utilities;
 
 .captcha-container a {
-  color: #2563eb !important; /* Tailwind blue-600 */
+  color: #110202 !important; 
   font-weight: 600;
   text-decoration: none;
+}
+
+
+.container{
+
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
